--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,6 +2,6 @@
     background-color: #2A2C2F;
     min-width: 320px;
     max-width: 1600px;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     /* выше для экранов больше 1600px отцентрировали весь контент */
 }
