--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -17,7 +17,7 @@
 
 @media all and (max-width: 320px) {
     .header__lang-link {
-        font-size: 1rem;
-        line-height: 1.25;
+        font-size: 18px;
+        line-height: 20px;
     }
 } 
