--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -16,7 +16,7 @@
     padding-right: 0px;
 }
 
-@media all and (max-width: 320px) {
+@media (max-width: 320px) {
     .header__lang-link {
         font-size: 18px;
         line-height: 20px;
