--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,7 +1,7 @@
 .header__lang-link {
     text-decoration: none;
     color: #ffffff;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-size: 1.5rem;
     font-weight: 400;
     line-height: 28px;
