--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,6 +1,6 @@
 .intro__text {
     max-width: 690px;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     color: #ffffff;
     font-size: 16px;
     font-weight: 400;
