--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,6 +1,6 @@
 .intro__title {
     max-width: 690px;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-size: 54px;
     line-height: 58px;
     font-weight: 900;
