--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,5 +1,5 @@
 .place__url-heading {
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-size: 12px;
     line-height: 12px;
     font-weight: 400;
