--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,5 +1,5 @@
 .place__website {
-    font-family: "Inter";
+    font-family: 'Inter', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
