Исправила ошибки.4.ревью.1.1

--- a/blocks/intro/__list-item/intro__list-item.css
+++ b/blocks/intro/__list-item/intro__list-item.css
@@ -1,6 +1,6 @@
 .intro__list-item {
     margin-block: 0;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
     font-size: 12px;
     font-weight: bold;
     line-height: 1.5;
