--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,12 +1,12 @@
 .intro__title {
     max-width: 690px;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
     font-size: 54px;
     line-height: 58px;
     font-weight: 900;
     color: #ffffff;
-    margin-block: 0;
-    padding-bottom: 40px;
+    margin-top: 0px;
+    margin-bottom: 40px;
 }
 
 @media (max-width: 768px) {
