--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,20 +1,26 @@
 .cover__link {
+    background-image: url(../../../images/cover-trains.jpg);
+    min-height: 740px;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     text-decoration: none;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 100%;
     position: relative;
+    margin: 0 auto;
 }
 
 .cover__link::before {
     content:"";
     display: block;
+    width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
     background-color: #2A2C2F;
     opacity: 0.3;
 }
@@ -22,3 +28,21 @@
 .cover__link:hover::before {
     opacity: 0.8;
   }
+
+  @media (max-width: 1024px) {
+    .cover__link {
+        min-height: 640px;
+    }
+} 
+
+@media (max-width: 768px) {
+    .cover__link {
+        min-height: 480px;
+    }
+} 
+
+@media (max-width: 320px) {
+    .cover__link {
+        min-height: 200px;
+    }
+} 
