--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,5 +1,5 @@
 .cover__title {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
@@ -11,10 +11,19 @@
     position: relative;
 }
 
+@media (max-width: 600px) {
+    .cover__title {
+        max-width: 360px;
+        font-size: 38px;
+        line-height: 1.2;
+        margin-bottom: 28px;
+    }
+}
+
 @media (max-width: 540px) {
     .cover__title {
         max-width: 320px;
-        font-size: 42px;
+        font-size: 36px;
         line-height: 45px;
         margin-bottom: 24px;
     }
