--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,20 +1,21 @@
 .header__lang-link {
     text-decoration: none;
     color: #ffffff;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
     font-size: 1.5rem;
     font-weight: 400;
     line-height: 28px;
     padding-right: 18px;
-}
-
-.header__lang-link:first-child {
-    text-decoration: underline;
+    transition: opacity 0.3s linear;
 }
 
 .header__lang-link:last-child{
     padding-right: 0px;
 }
+
+.header__lang-link:hover {
+    opacity: 80%;
+  }
 
 @media (max-width: 320px) {
     .header__lang-link {
