--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,6 +3,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 28px 48px;
+    max-width: 1184px;
 }
 
 @media screen and (max-width: 768px) {
