--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,11 +1,10 @@
 .intro__text {
     max-width: 690px;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
     color: #ffffff;
     font-size: 16px;
     font-weight: 400;
-    line-height: 163%;
-    margin-block: 0;
+    line-height: 26.08px;
 }
 
 @media (max-width: 768px) {
