--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,6 +1,6 @@
 .lead__subtitle {
     color: #ffffff;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
     font-size: 30px;
     line-height: 1.2;
     font-weight: 400;
@@ -21,7 +21,6 @@
     .lead__subtitle {
         max-width: 80%;
         font-size: 25px;
-        line-height: 1.2;
     }
 } 
 
