--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,8 +1,8 @@
 .lead__title {
-    font-size: 6.25rem;
+    font-size: 96px;
     color: #ffffff;
-    font-family: 'Inter', sans-serif;
-    line-height: 96px;
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
+    line-height: 100px;
     max-width: 720px;
     font-weight: 900;
     max-height: 200px;
