--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,5 +1,5 @@
 .place__image {
-    max-width: 460px;
+    width: 50%;
     box-sizing: border-box;
     padding-right: 40px;
     height: 50%;
@@ -7,14 +7,12 @@
 
 @media (max-width: 1024px) {
     .place__image {
-        max-width: 440px;
         padding-right: 32px;
     }
 } 
 
 @media (max-width: 768px) {
     .place__image {
-        max-width: 340px;
         padding-right: 28px;
     }
 } 
@@ -22,6 +20,7 @@
 @media (max-width: 640px) {
     .place__image {
         width: 100%;
+        height: 100%;
         padding: 0;
     }
 } 
