--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,8 +1,8 @@
 .place__paragraph {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
     font-weight: 400;
     font-size: 18px;
-    line-height: 163%;
+    line-height: 29.34px;
     color: #ffffff;
     padding-bottom: 26px;
     margin-block: 0;
@@ -27,9 +27,5 @@
 @media (max-width: 320px) {
     .place__paragraphs {
         padding: 0 16px 25px;
-    }
-
-    .place__paragraph:last-child {
-        padding-bottom: 0px;
     }
 } 
