--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,35 +1,29 @@
 .place__title {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
     color: #ffffff;
-    width: 460px;
+    width: 50%;
     padding-bottom: 48px;
-    padding-right: 40px;
     margin-block: 0;
 }
 
-@media (max-width: 1024px) {
-    .place__title {
-        width: 440px;
-        padding-right: 32px;
-    }
-} 
-
 @media (max-width: 768px) {
     .place__title {
-        width: 320px;
-        padding-right: 28px;
+        box-sizing: border-box;
+        padding-right: 32px;
         font-size: 42px;
         line-height: 46px;
     }
 } 
 
-@media (max-width: 320px) {
+@media (max-width: 500px) {
     .place__title {
-        width: 288px;
-        padding: 0 16px;
+        padding-bottom: 18px;
+        padding-left: 16px;
+        width: 100%;
+        height: 100%;
         font-size: 32px;
         line-height: 36px;
     }
