--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -13,6 +13,7 @@
 
 @media (max-width: 650px) {
     .footer__copyright {
+        line-height: 14px;
         padding-top: 48px;
         width: 100%;
         justify-content: flex-start;
