--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,8 +1,7 @@
 .intro__list {
-    padding-top: 33px;
     list-style-type: none;
-    margin-block: 0;
-    padding-inline: 0;
+    margin: 0;
+    padding: 0;
     max-width: 690px;
 }
 
