--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -5,6 +5,8 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 26.08px;
+    margin-bottom: 33px;
+    margin-top: 0;
 }
 
 @media (max-width: 768px) {
