--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -12,20 +12,17 @@
     padding-bottom: 0px;
 }
 
-@media (max-width: 768px) {
-    .place__paragraphs {
-        font-size: 16px;
-    }
-}
-
 @media (max-width: 640px) {
-    .place__paragraphs {
-        padding-top: 32px;
+    .place__paragraph {
+        padding-left: 16px;
+        padding-right: 16px;
+        padding-bottom: 25px;
     }
 }
 
-@media (max-width: 320px) {
-    .place__paragraphs {
-        padding: 0 16px 25px;
+@media (max-width: 768px) {
+    .place__paragraph {
+        font-size: 16px;
+        line-height: 26.08px;
     }
-} 
+}
