--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -4,26 +4,24 @@
     font-size: 72px;
     line-height: 76px;
     color: #ffffff;
-    width: 50%;
-    padding-bottom: 48px;
     margin-block: 0;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 850px) {
     .place__title {
-        box-sizing: border-box;
-        padding-right: 32px;
         font-size: 42px;
         line-height: 46px;
     }
 } 
 
+@media (max-width: 640px) {
+    .place__title {
+        padding-left: 16px;
+    }
+} 
+
 @media (max-width: 500px) {
     .place__title {
-        padding-bottom: 18px;
-        padding-left: 16px;
-        width: 100%;
-        height: 100%;
         font-size: 32px;
         line-height: 36px;
     }
