Исправила ошибки.4.ревью.1.3

--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -15,7 +15,13 @@
     }
 } 
 
-@media (max-width: 320px) {
+@media (max-width: 530px) {
+    .intro__title{
+        max-width: 450px;
+    }
+} 
+
+@media (max-width: 340px) {
     .intro__text{
         max-width: 288px;
     }
